@@ -1,5 +1,6 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.controllers;
 
+import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -70,7 +71,7 @@ class Et3NotificationControllerTest extends BaseControllerTest {
 
     @BeforeEach
     @Override
-    protected void setUp() throws Exception {
+    protected void setUp() {
         super.setUp();
         CaseDetails caseDetails = CaseDataBuilder.builder()
             .withEthosCaseReference("12345/6789")
@@ -90,7 +91,7 @@ class Et3NotificationControllerTest extends BaseControllerTest {
 
         CaseData caseDataWithNotificationDocument = caseDetails.getCaseData();
         caseDataWithNotificationDocument.setClaimant("Claimant LastName");
-        caseDataWithNotificationDocument.getRespondentCollection().get(0)
+        caseDataWithNotificationDocument.getRespondentCollection().getFirst()
                 .getValue().setResponseStatus(ACCEPTED_STATE);
         caseDataWithNotificationDocument.setEt3NotificationDocCollection(List.of(DocumentTypeItem.builder()
                 .value(DocumentType.builder().typeOfDocument(
@@ -126,7 +127,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void aboutToStart_tokenOk() throws Exception {
+    @SneakyThrows
+    void aboutToStart_tokenOk() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         mvc.perform(post(ABOUT_TO_START_URL)
                         .content(jsonMapper.toJson(ccdRequestWithET3NotificationDocument))
@@ -138,7 +140,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void aboutToStart_noRespondentResponseStatus() throws Exception {
+    @SneakyThrows
+    void aboutToStart_noRespondentResponseStatus() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         when(servingService.generateOtherTypeDocumentLink(anyList())).thenReturn("expectedDocumentName");
         when(servingService.generateEmailLinkToAcas(any(), anyBoolean())).thenReturn("expectedLink");
@@ -152,7 +155,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void aboutToStart_tokenFail() throws Exception {
+    @SneakyThrows
+    void aboutToStart_tokenFail() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(false);
         mvc.perform(post(ABOUT_TO_START_URL)
                         .content(jsonMapper.toJson(ccdRequestWithET3NotificationDocument))
@@ -162,7 +166,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void midUploadDocuments_tokenOk() throws Exception {
+    @SneakyThrows
+    void midUploadDocuments_tokenOk() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         when(servingService.generateOtherTypeDocumentLink(anyList())).thenReturn("expectedDocumentName");
         when(servingService.generateEmailLinkToAcas(any(), anyBoolean())).thenReturn("expectedLink");
@@ -180,7 +185,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void midUploadDocuments_invalidET3NotificationDocumentList() throws Exception {
+    @SneakyThrows
+    void midUploadDocuments_invalidET3NotificationDocumentList() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         mvc.perform(post(MID_UPLOAD_DOCUMENTS_URL)
                         .content(jsonMapper.toJson(ccdRequestInvalidET3NotificationDocumentCollection))
@@ -191,7 +197,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void midUploadDocuments_invalidRespondentCollection() throws Exception {
+    @SneakyThrows
+    void midUploadDocuments_invalidRespondentCollection() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         mvc.perform(post(MID_UPLOAD_DOCUMENTS_URL)
                         .content(jsonMapper.toJson(ccdRequestWithoutRespondentResponseAcceptedState))
@@ -202,7 +209,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void midUploadDocuments_tokenFail() throws Exception {
+    @SneakyThrows
+    void midUploadDocuments_tokenFail() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(false);
         mvc.perform(post(MID_UPLOAD_DOCUMENTS_URL)
                 .content(jsonMapper.toJson(ccdRequestWithET3NotificationDocument))
@@ -212,7 +220,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void midUploadDocuments_badRequest() throws Exception {
+    @SneakyThrows
+    void midUploadDocuments_badRequest() {
         mvc.perform(post(SUBMITTED_URL)
                 .content("garbage content")
                 .header("Authorization", AUTH_TOKEN)
@@ -221,7 +230,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void aboutToSubmit_tokenOk() throws Exception {
+    @SneakyThrows
+    void aboutToSubmit_tokenOk() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         mvc.perform(post(ABOUT_TO_SUBMIT_URL)
                         .content(jsonMapper.toJson(ccdRequestWithET3NotificationDocument))
@@ -236,7 +246,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void aboutToSubmit_tokenFail() throws Exception {
+    @SneakyThrows
+    void aboutToSubmit_tokenFail() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(false);
         mvc.perform(post(ABOUT_TO_SUBMIT_URL)
                         .content(jsonMapper.toJson(ccdRequestWithET3NotificationDocument))
@@ -246,7 +257,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void submitted_tokenOk() throws Exception {
+    @SneakyThrows
+    void submitted_tokenOk() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
         SubmitEvent submitEvent = new SubmitEvent();
         submitEvent.setCaseId(1L);
@@ -265,7 +277,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void submitted_tokenFail() throws Exception {
+    @SneakyThrows
+    void submitted_tokenFail() {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(false);
         mvc.perform(post(SUBMITTED_URL)
                 .content(jsonMapper.toJson(ccdRequestWithET3NotificationDocument))
@@ -275,7 +288,8 @@ class Et3NotificationControllerTest extends BaseControllerTest {
     }
 
     @Test
-    void submitted_badRequest() throws Exception {
+    @SneakyThrows
+    void submitted_badRequest() {
         mvc.perform(post(SUBMITTED_URL)
                 .content("garbage content")
                 .header("Authorization", AUTH_TOKEN)
